event card alignment fix

--- a/app/styles/partials/utils.scss
+++ b/app/styles/partials/utils.scss
@@ -22,10 +22,6 @@
   height: auto !important;
 }
 
-.h-100 {
-  height: 100% !important;
-}
-
 .h-80perc {
   height: 80% !important;
 }
